--- a/index.html
+++ b/index.html
@@ -4,10 +4,33 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>E-Commerce Store</title>
+
+  <!-- Primary Meta Tags -->
+  <title>Tharagai Boutique – Stylish Fashion & Accessories</title>
+  <meta name="title" content="Tharagai Boutique – Stylish Fashion & Accessories" />
+  <meta name="description" content="Discover the latest fashion and accessories at Tharagai Boutique. Shop products, add to cart, and checkout easily with our secure online store." />
+  <meta name="keywords" content="fashion, boutique, clothing, accessories, online shopping, tharagai boutique" />
+  <meta name="author" content="Tharagai Boutique" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.tharagaiboutique.com/" />
+  <meta property="og:title" content="Tharagai Boutique – Stylish Fashion & Accessories" />
+  <meta property="og:description" content="Discover the latest fashion and accessories at Tharagai Boutique. Shop products, add to cart, and checkout easily with our secure online store." />
+  <meta property="og:image" content="https://www.tharagaiboutique.com/og-image.jpg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://www.tharagaiboutique.com/" />
+  <meta property="twitter:title" content="Tharagai Boutique – Stylish Fashion & Accessories" />
+  <meta property="twitter:description" content="Discover the latest fashion and accessories at Tharagai Boutique. Shop products, add to cart, and checkout easily with our secure online store." />
+  <meta property="twitter:image" content="https://www.tharagaiboutique.com/og-image.jpg" />
+
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet" />
+
 
 </head>
 
