--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-  <link rel="icon" href="/favicon.ico" />
-  <link rel="icon" type="image/png" href="/icon.png" />
+  <link rel="icon" href="./favicon.ico" />
+  <link rel="icon" type="image/png" href="./icon.png" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -38,7 +38,7 @@
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="./src/main.jsx"></script>
 </body>
 
 </html>
