--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary Meta Tags -->
-  <title>Tharagai Boutique – Stylish Fashion & Accessories</title>
-  <meta name="title" content="Tharagai Boutique – Stylish Fashion & Accessories" />
-  <meta name="description" content="Discover the latest fashion and accessories at Tharagai Boutique. Shop products, add to cart, and checkout easily with our secure online store." />
-  <meta name="keywords" content="fashion, boutique, clothing, accessories, online shopping, tharagai boutique" />
+  <title>Tharagai Boutique - Destination for Unstitched Dress Materials and Ready to Wear</title>
+  <meta name="title" content="Tharagai Boutique - Destination for Unstitched Dress Materials and Ready to Wear" />
+  <meta name="description" content="Tharagai Boutique is your one-stop destination for premium unstitched dress materials and elegant ready-to-wear suits. We offer exclusive collections crafted from high-quality fabrics, designed to bring out timeless style and comfort. Our ready-to-wear range features premium Jaipur cotton, known for its softness, breathability, and classic appeal. Discover the latest trends and handpicked designs on our website. Happy shopping!" />
+  <meta name="keywords" content="Tharagai Boutique, tharagai boutique online, boutique clothing store, women boutique clothing, women’s fashion boutique, fashion boutique online shopping, unstitched dress materials, ready to wear suits, Jaipur cotton suits, premium cotton ethnic wear, designer salwar materials, ethnic wear boutique, designer dresses for women, kurtis online, boutique sarees, handmade fashion, fashion accessories, stylish outfits for women, affordable boutique wear, online fashion store" />
   <meta name="author" content="Tharagai Boutique" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.tharagaiboutique.com/" />
-  <meta property="og:title" content="Tharagai Boutique – Stylish Fashion & Accessories" />
-  <meta property="og:description" content="Discover the latest fashion and accessories at Tharagai Boutique. Shop products, add to cart, and checkout easily with our secure online store." />
+  <meta property="og:title" content="Tharagai Boutique - Destination for Unstitched Dress Materials and Ready to Wear" />
+  <meta property="og:description" content="Tharagai Boutique is your one-stop destination for premium unstitched dress materials and elegant ready-to-wear suits. We offer exclusive collections crafted from high-quality fabrics, designed to bring out timeless style and comfort. Our ready-to-wear range features premium Jaipur cotton, known for its softness, breathability, and classic appeal. Discover the latest trends and handpicked designs on our website. Happy shopping!" />
   <meta property="og:image" content="https://www.tharagaiboutique.com/og-image.jpg" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://www.tharagaiboutique.com/" />
-  <meta property="twitter:title" content="Tharagai Boutique – Stylish Fashion & Accessories" />
-  <meta property="twitter:description" content="Discover the latest fashion and accessories at Tharagai Boutique. Shop products, add to cart, and checkout easily with our secure online store." />
+  <meta property="twitter:title" content="Tharagai Boutique - Destination for Unstitched Dress Materials and Ready to Wear" />
+  <meta property="twitter:description" content="Tharagai Boutique is your one-stop destination for premium unstitched dress materials and elegant ready-to-wear suits. We offer exclusive collections crafted from high-quality fabrics, designed to bring out timeless style and comfort. Our ready-to-wear range features premium Jaipur cotton, known for its softness, breathability, and classic appeal. Discover the latest trends and handpicked designs on our website. Happy shopping!" />
   <meta property="twitter:image" content="https://www.tharagaiboutique.com/og-image.jpg" />
 
   <!-- Fonts -->
